simple-web-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-web
