simple-web-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-web-ingress
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /omer
        backend:
          serviceName: simple-web-service
          servicePort: 80
